fix overflowed extras dropdown in short sections panes

--- a/src/assets/styles/customize/controls/_radio-image.scss
+++ b/src/assets/styles/customize/controls/_radio-image.scss
@@ -3,7 +3,6 @@
  *
  */
 .customize-control-pwpcp_radio_image {
-  overflow-x: hidden; // because the hint tips overflow on the sides
 
   label {}
 
